fix:-Aligned interest and subscribe section

--- a/GG Hospital/bottom-footer/bottom-footer.css
+++ b/GG Hospital/bottom-footer/bottom-footer.css
@@ -1,3 +1,12 @@
+.specialities{
+    margin-bottom: 250px;
+}
+
+.interest{
+    position: absolute;
+    top:2950px; 
+}
+
 .subscribe{
     background-color: #EAF2FF;
 }
@@ -6,7 +15,7 @@
     background-color: white;
     margin-left: 100px;
     margin-right: 100px;
-    margin-top: 500px;
+    margin-top: 1000px;
     height: fit-content;
     justify-content: center;
     align-items: center;
@@ -25,7 +34,7 @@
 
 .email{
     position: absolute;
-    top:3790px;
+    top:3625px;
     left: 725px;
     z-index: 10;
 }
@@ -43,7 +52,7 @@
 .banner-img{
     width: 80%;
     margin-left: 130px;
-    margin-top: 250px;
+    margin-top: 350px;
     margin-bottom: 100px;
     /* position: relative; */
 }
@@ -62,7 +71,7 @@
 
 .btn{
     position: absolute;
-    top: 3825px;
+    top: 3655px;
     left: 975px;
     z-index: 10;
 }
@@ -126,7 +135,7 @@
 .mail-icon{
     width: 15px;
     max-width: 100%;
-    top: 4260px;
+    top: 4100px;
     left: 725px;
     position: absolute;
 }
@@ -135,7 +144,7 @@
     width: 12px;
     max-width: 100%;
     position: absolute;
-    top: 4260px;
+    top: 4100px;
     left: 550px;
 }
 
@@ -143,7 +152,7 @@
     width: 12px;
     max-width: 100%;
     position: absolute;
-    top: 4260px;
+    top: 4100px;
     left: 125px;
 }
 
@@ -161,4 +170,6 @@
 
 .footer-copyright{
     text-align: center;
+    color: gray;
+    font-size: 12px;
 }
